--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
     "@types/react-redux": "^7.1.25",
-    "redux-devtools-extension": "^2.13.9",
     "axios": "^1.2.6",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.5",
@@ -26,6 +25,7 @@
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
     "styled-components": "^5.3.6",
+    "typesafe-actions": "^5.1.0",
     "typescript": "4.9.4"
   },
   "resolutions": {
@@ -33,6 +33,7 @@
   },
   "devDependencies": {
     "@types/styled-components": "^5.1.26",
-    "babel-plugin-styled-components": "^2.0.7"
+    "babel-plugin-styled-components": "^2.0.7",
+    "redux-devtools-extension": "^2.13.9"
   }
 }
